# nyu-colors

./: .gitignore  LICENSE  README.md  nyu_colors.py  pyproject.toml
nyu_colors/: __init__.py
nyu_colors.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
